package donjonDragon.entite.classe;

public class Clerc extends Classe
{
    public Clerc()
    {
        m_pv = 16;
    }
}
