package donjonDragon.entite.race;

public class Halfelin extends Race
{
    public Halfelin()
    {
        m_pv = 0;
        m_force = 0;
        m_dexterite = 4;
        m_vitesse = 2;
        m_initiative = 0;
    }
}
