package donjonDragon.entite.race;

public class Nain extends Race
{
    public Nain()
    {
        m_pv = 0;
        m_force = 6;
        m_dexterite = 0;
        m_vitesse = 0;
        m_initiative = 0;
    }
}
