package entite;

public class Magicien extends Classe
{

}
